--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-close" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-save"></button>
+          <button type="button" class="btn btn-save">Save Changes</button>
         </div>
       </div>
     </div>
